--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ header {
     border:black;
     border-style: dashed;
     border-width: 1px;
+    text-align: center;
 }
 ul {
     list-style: square;
