--- a/TermProject/style.css
+++ b/TermProject/style.css
@@ -6,10 +6,15 @@
 
 head, nav, main, aside, footer {
     background-color: #ffffff;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+nav ol, aside {
+    background-color:darkseagreen;
 }
 
 body {
-    background-color: #3b3b3b;
+    background-color: black;
     min-width: 500px;
 }
 
@@ -19,10 +24,13 @@ header {
     gap: 1em;
 }
 
+header, footer {
+    background-color: chocolate;
+}
+
 nav ol {
     text-align: center;
     list-style-type: none;
-    background-color: grey;
 }
 
 nav li {
@@ -121,6 +129,10 @@ footer {
         grid-template-columns: 150px 2fr 1fr;
         max-width: 80%;
         margin: auto;
+    }
+
+    aside {
+        display: grid;
     }
 
     aside img {
